--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ img {
 
 .section {
   padding: 120px 0;
-  max-width: 1440px;
+  /* max-width: 1440px; */
   margin-right: auto;
   margin-left: auto;
 }
@@ -472,11 +472,19 @@ img {
   }
 } */
 .modal {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  justify-content: center;
   position: absolute;
   top: 50%;
   left: 50%;
+  padding-top: 72px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
   width: 408px;
-  height: 516px;
+  /* height: 584px; */
   background-color: var(--modal-bg-color);
   transform: translate(-50%, -50%);
   border-radius: 4px;
@@ -497,6 +505,8 @@ img {
   right: 24px;
   top: 24px;
   display: flex;
+  width: 24px;
+  height: 24px;
   justify-content: center;
   align-items: center;
   padding: 8px;
@@ -521,6 +531,153 @@ img {
   transition-property: background-color fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-group-element {
+  position: relative;
+  display: flex;
+  width: 100%;
+}
+
+.modal-group-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 16px;
+  fill: rgba(33, 33, 33, 0.2);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
+}
+
+.modal-desc {
+  display: block;
+  text-align: center;
+  font-weight: 500;
+  flex-basis: 100%;
+}
+.modal-form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  flex-basis: 100%;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: var(--sub-txt-color);
+}
+
+.modal-label-name {
+  letter-spacing: 0.04em;
+}
+
+.modal-form-field {
+  display: block;
+  width: 100%;
+  padding-left: 38px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: 1px solid transparent;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-field:hover,
+.modal-form-field:focus,
+.modal-form-field:focus-visible {
+  outline: 1px solid var(--presed-link-color);
+  outline-offset: -1px;
+}
+
+.modal-form-field:hover + .modal-group-icon,
+.modal-form-field:focus + .modal-group-icon,
+.modal-form-field:focus-visible + .modal-group-icon {
+  fill: var(--presed-link-color);
+}
+.modal-form-textarea {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 8px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  height: 120px;
+  resize: none;
+  outline: 1px solid transparent;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-textarea:hover,
+.modal-form-textarea:focus,
+.modal-form-textarea:focus-visible {
+  outline: 1px solid var(--presed-link-color);
+  outline-offset: -1px;
+}
+
+.modal-form-textarea::placeholder {
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.04em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-comment {
+}
+
+.modal-form-policy {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.04em;
+}
+
+.modal-group-policy {
+  margin-top: 8px;
+  gap: 8px;
+}
+
+.modal-form-check {
+  appearance: none;
+}
+.modal-policy-desc {
+  user-select: none;
+}
+.modal-form-link {
+  color: var(--main-link-color);
+}
+
+.modal-icon-checked {
+}
+.modal-icon-frame {
+  fill: transparent;
+  stroke: var(--dark-theme-color);
+  transition: fill, stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-icon-check {
+  opacity: 0;
+  transition: opacity 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-check:checked + .modal-icon-checked > .modal-icon-check {
+  opacity: 1;
+  fill: var(--light-theme-color);
+}
+
+.modal-form-check:checked + .modal-icon-checked > .modal-icon-frame {
+  fill: var(--presed-link-color);
+  stroke: var(--presed-link-color);
+}
+
+.modal-group-submit {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+.modal-btn-submit {
+  width: 169px;
+  height: 56px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: transparent;
+  border-radius: 4px;
+  /* justify-self: center; */
 }
 /* Projects-style */
 .section-projects {
@@ -675,5 +832,53 @@ img {
 }
 
 .footer-social-icon {
+  fill: var(--light-theme-color);
+}
+
+.subscribe-side {
+  margin-left: 80px;
+  display: flex;
+  flex-direction: column;
+  /* gap: 16px; */
+}
+
+.footer-subscribe-group {
+  display: flex;
+  gap: 24px;
+  justify-content: start;
+}
+.footer-subscribe-label {
+  display: flex;
+  gap: 24px;
+}
+.footer-subscribe {
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  color: var(--light-theme-color);
+  outline: 1px solid transparent;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe:hover,
+.footer-subscribe:focus,
+.footer-subscribe:focus-visible {
+  outline: 1px solid var(--presed-link-color);
+  outline-offset: -2px;
+}
+.footer-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 8px 24px;
+  border-radius: 4px;
+  border-color: transparent;
+}
+.footer-subscribe-icon {
   fill: var(--light-theme-color);
 }
